metadata - compressed images - const options

--- a/Frontend/src/features/footer/components/Footer.astro
+++ b/Frontend/src/features/footer/components/Footer.astro
@@ -16,7 +16,7 @@ import { WHATSAPP_URL, FACEBOOK_URL, INSTAGRAM_URL } from "shared/constants";
 
 <footer id="footer" class="laptop:medium-section center-col laptop:center gap-10 monitor:gap-20 mt-10">
     <section class="laptop:w-[30rem] h-full center-col laptop:block ">
-        <img src="/static/iconos/logoT.png" class="w-1/3"/>
+        <img alt="logo" src="/static/iconos/logoT.png" class="w-1/3"/>
         <div class="w-52 laptop:w-full">
             <p class="text-center monitor:text-justify">Tu tranquilidad es nuestra prioridad. Contáctanos hoy y recibe asesoría legal personalizada.</p>
             <p class="text-center monitor:text-start">¡Estamos aquí para ayudarte!</p>
