--- a/Frontend/src/features/header/components/Header.astro
+++ b/Frontend/src/features/header/components/Header.astro
@@ -34,7 +34,7 @@ import { MdAccountBalance } from "react-icons/md";
 
             <div class='center-col relative card'>
                 <div class="absolute -top-5 laptop:-top-10 rounded-full bg-primary">
-                    <img class="w-10 h-10 laptop:w-20 laptop:h-20 opacity-60 " src="static/header/compromiso.svg"/>
+                    <img alt="icon" class="w-10 h-10 laptop:w-20 laptop:h-20 opacity-60 " src="static/header/compromiso.svg"/>
                 </div>
 
                 <h3 class="text-lg laptop:text-xl uppercase opacity-80 font-semibold mt-7">compromiso</h3>
@@ -47,7 +47,7 @@ import { MdAccountBalance } from "react-icons/md";
             </div>
             <div class='center-col relative card'>
                 <div class="absolute -top-5 laptop:-top-10 rounded-full bg-primary">
-                    <img class="w-10 h-10 laptop:w-20 laptop:h-20 opacity-60" src="static/header/celeridad.svg"/>
+                    <img alt="icon" class="w-10 h-10 laptop:w-20 laptop:h-20 opacity-60" src="static/header/celeridad.svg"/>
                 </div>
                 <h3 class="text-lg laptop:text-xl uppercase opacity-80 font-semibold mt-7">celeridad</h3>
                 
@@ -58,7 +58,7 @@ import { MdAccountBalance } from "react-icons/md";
             </div>
             <div class='center-col relative card'>
                 <div class="absolute -top-5 laptop:-top-10 rounded-full bg-primary">
-                    <img class="w-10 h-10 laptop:w-20 laptop:h-20 opacity-60" src="static/header/costos.svg"/>
+                    <img alt="icon" class="w-10 h-10 laptop:w-20 laptop:h-20 opacity-60" src="static/header/costos.svg"/>
                 </div>
                 <h3 class="text-lg laptop:text-xl uppercase opacity-80 font-semibold mt-7">costos</h3>
                 
