--- a/Frontend/src/features/header/components/Navbar.astro
+++ b/Frontend/src/features/header/components/Navbar.astro
@@ -12,7 +12,7 @@ import { WHATSAPP_URL } from "shared/constants";
 ---
 <nav class="flex monitor:h-14 bigmonitor:h-20 items-center center laptop:justify-between w-full mx-auto bg-boxes">
     <div class="h-full w-16 p-3 monitor:w-20 center ml-10 ">
-        <img class="" src="/static/iconos/logo.png"/>
+        <img alt="logo" class="" src="/static/iconos/logo.png"/>
     </div>
     
     <UrlWrapper url={WHATSAPP_URL}>
