--- a/Frontend/src/features/inmobiliario/components/Inmobiliario.astro
+++ b/Frontend/src/features/inmobiliario/components/Inmobiliario.astro
@@ -13,31 +13,31 @@ import Item from "@components/inmobiliario/components/Item.astro";
     <section class="center-col-nomid monitor:center h-2/3 z-30">
 
         <Item title="auditoria contable inicial" color="bg-blue-300">
-            <img class="w-2/3 h-2/3" src="static/other/auditoria.svg"/>
+            <img alt="icon" class="w-2/3 h-2/3" src="static/other/auditoria.svg"/>
         </Item>
         <div class="separator bg-blue-300"></div>
         <Item title="INSPECCIÓN DEL EDIFICIO" color="bg-blue-400">
-            <img class="w-2/3 h-2/3" src="static/other/eye.svg"/>
+            <img alt="icon" class="w-2/3 h-2/3" src="static/other/eye.svg"/>
         </Item>
         <div class="separator bg-blue-400"></div>
         <Item title="MANTENIMIENTO Y/O MEJORAS (PUESTA EN VALOR DEL EDIFICIO)" color="bg-blue-500">
-            <img class="w-2/3 h-2/3" src="static/other/building.svg"/>
+            <img alt="icon" class="w-2/3 h-2/3" src="static/other/building.svg"/>
         </Item>
         <div class="separator bg-blue-500"></div>
         <Item title="liquidación de expensas" color="bg-blue-600">
-            <img class="w-2/3 h-2/3" src="static/other/liquidacion.svg"/>
+            <img alt="icon" class="w-2/3 h-2/3" src="static/other/liquidacion.svg"/>
         </Item>
         <div class="separator bg-blue-600"></div>
         <Item title="control y seguimiento de morosos" color="bg-blue-700">
-            <img class="w-2/3 h-2/3" src="static/other/control.svg"/>
+            <img alt="icon" class="w-2/3 h-2/3" src="static/other/control.svg"/>
         </Item>
         <div class="separator bg-blue-700"></div>
         <Item title="pago de servicios, proveedores y control de personal" color="bg-blue-800">
-            <img class="w-2/3 h-2/3" src="static/other/servicios.svg"/>
+            <img alt="icon" class="w-2/3 h-2/3" src="static/other/servicios.svg"/>
         </Item>
         <div class="separator bg-blue-800"></div>
         <Item title="Comunicación fluida entre administración y consorcio" color="bg-blue-900">
-            <img class="w-2/3 h-2/3" src="static/other/comunicacion.svg"/>
+            <img alt="icon" class="w-2/3 h-2/3" src="static/other/comunicacion.svg"/>
         </Item>
 
 
