--- a/Frontend/src/features/credits/components/Credits.astro
+++ b/Frontend/src/features/credits/components/Credits.astro
@@ -11,7 +11,7 @@ const arielGitUrl = "https://www.github.com/arielalvaro57666"
         <h3 class=" font-mono text-sm">Desarrollado por</h3>
     
         <UrlWrapper url={arielUrl}>
-            <img class="suave w-8 h-8 cursor-pointer hover:scale-125" src="/static/iconos/ariel_logo.png"/>
+            <img alt="dev logo" class="suave w-8 h-8 cursor-pointer hover:scale-125" src="/static/iconos/ariel_logo.png"/>
         </UrlWrapper>
 
         <UrlWrapper url={arielGitUrl}>
