--- a/Frontend/src/layouts/Layout.astro
+++ b/Frontend/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content="En Estudio Jurídico AD creemos que el derecho debe ser claro y accesible para todos. Por eso, nuestro compromiso es brindarte un asesoramiento legal cercano, honesto y eficaz. Sabemos que cada caso es único y que detrás de cada consulta hay una persona buscando soluciones y tranquilidad. Si necesitás apoyo legal, estamos para acompañarte en cada paso del camino." />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/static/iconos/32icon.png" />
 		<meta name="generator" content={Astro.generator} />
@@ -21,14 +21,14 @@ const { title } = Astro.props;
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://estudiojuridicoad.com" />
 		<meta property="og:title" content="Estudio Jurídico AD" />
-		<meta property="og:description" content="DESCRIPCION_DE_TU_PAGINA" />
+		<meta property="og:description" content="En Estudio Jurídico AD creemos que el derecho debe ser claro y accesible para todos. Por eso, nuestro compromiso es brindarte un asesoramiento legal cercano, honesto y eficaz. Sabemos que cada caso es único y que detrás de cada consulta hay una persona buscando soluciones y tranquilidad. Si necesitás apoyo legal, estamos para acompañarte en cada paso del camino." />
 		<meta property="og:image" content="/static/iconos/thumbnail.jpg" />
 	
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image" />
 		<meta property="twitter:url" content="https://estudiojuridicoad.com" />
 		<meta property="twitter:title" content="Estudio Jurídico AD" />
-		<meta property="twitter:description" content="DESCRIPCION_DE_TU_PAGINA" />
+		<meta property="twitter:description" content="En Estudio Jurídico AD creemos que el derecho debe ser claro y accesible para todos. Por eso, nuestro compromiso es brindarte un asesoramiento legal cercano, honesto y eficaz. Sabemos que cada caso es único y que detrás de cada consulta hay una persona buscando soluciones y tranquilidad. Si necesitás apoyo legal, estamos para acompañarte en cada paso del camino." />
 		<meta property="twitter:image" content="/static/iconos/thumbnail.jpg" />
 	</head>
 	<body>
